Continued fixing styling, changed width for different components, added emojis for added readability

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
   text-align: center;
+  background-color: white;
+}
+
+.Page {
+  background: white;
 }
 
 .Header {
-  background-color: white;
+  background-color: rgb(187, 242, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,6 +17,20 @@
   margin-right: 30%;
   margin-left: 30%;
   padding: 15px;
+  box-shadow: 0px 0px 1px 1px;
+}
+
+.Winner {
+  background-color: rgb(187, 242, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  margin-right: 10%;
+  margin-left: 10%;
+  padding: 15px;
+  box-shadow: 0px 0px 1px 1px;
 }
 
 .Center {
@@ -20,19 +39,68 @@
   align-items: center;
 }
 
-.Button {
-  margin: 12px;
-  width: 200px;
-  height:50px;
-  background-color: seashell;
-  font-size: 14px;
-  border-radius: 15px;
-  justify-content: center;
-  align-items: center;
+.Submit {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 30px;
+  padding-top: 4px;
+  border-radius: 50px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(201, 212, 222);
+  outline: black;
+  box-shadow: 0px 0px 1px 1px;
+  font-weight: bolder;
 }
 
-.Button:hover {
-  background-color: burlywood;
+.Submit:hover {
+  background-color: rgb(73, 170, 226);
+}
+
+.Food-items {
+  display: flex;
+  flex-direction: column;
+  padding-top: 7px;
+  width: 100%;
+  height: 50px;
+  border-radius: 50px;
+  font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(201, 212, 222);
+  outline: black;
+  box-shadow: 0px 0px 1px 1px
+  /* font-weight: bolder; */
+}
+
+.Food-items:hover {
+  background-color: rgb(73, 170, 226);
+}
+
+.Food-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 4% 10%;
+}
+
+.Reset-button {
+  display: flex;
+  flex-direction: column;
+  padding-top: 7px;
+  width: 30%;
+  height: 50px;
+  border-radius: 50px;
+  font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(201, 212, 222);
+  outline: black;
+  box-shadow: 0px 0px 1px 1px
+  /* font-weight: bolder; */
+}
+
+.Reset-button:hover {
+  background-color: rgb(73, 170, 226);
 }
 
 .Eatery-card {
